Crash removing Rigid Body World #56439

Closed
opened 2018-08-17 14:50:42 +02:00 by Alessio Monti di Sopra · 5 comments

Windows 8.1 64 bit
CPU: Intel i7 4700MQ
GPU: Nvidia GeForce GT 740M

Blender Version
fa70826167

Short description of error
Blender crashes after removing rigid body world if one tries to manipulate an object previously affected by it.

Exact steps for others to reproduce the error
In default scene, activate rigid body simulation for the cube, remove "rigid body world" from the Scene panel, then try to move, scale or rotate the cube.
It also happens with every option of the Apply panel except "Make Duplicates Real".

Error message in console:

Error   : EXCEPTION_ACCESS_VIOLATION

Everything seems to work fine if you instead perform another action before, like selecting another object for example.

Windows 8.1 64 bit CPU: Intel i7 4700MQ GPU: Nvidia GeForce GT 740M **Blender Version** fa708261679 **Short description of error** Blender crashes after removing rigid body world if one tries to manipulate an object previously affected by it. **Exact steps for others to reproduce the error** In default scene, activate rigid body simulation for the cube, remove "rigid body world" from the Scene panel, then try to move, scale or rotate the cube. It also happens with every option of the *Apply* panel except "Make Duplicates Real". Error message in console: ``` Error : EXCEPTION_ACCESS_VIOLATION ``` Everything seems to work fine if you instead perform another action before, like selecting another object for example.

Added subscriber: @a.monti

Added subscriber: @a.monti

Added subscriber: @mont29

Added subscriber: @mont29
Bastien Montagne self-assigned this 2018-08-18 10:20:04 +02:00

Confirmed, missing DEG update in this operator…

Confirmed, missing DEG update in this operator…

This issue was referenced by 27ccba0270

This issue was referenced by 27ccba0270a5af51d4c8e4f4fed5bbdf1a922802

Changed status from 'Open' to: 'Resolved'

Changed status from 'Open' to: 'Resolved'
Sign in to join this conversation.
No Label
Interest
Alembic
Interest
Animation & Rigging
Interest
Asset Browser
Interest
Asset Browser Project Overview
Interest
Audio
Interest
Automated Testing
Interest
Blender Asset Bundle
Interest
BlendFile
Interest
Collada
Interest
Compatibility
Interest
Compositing
Interest
Core
Interest
Cycles
Interest
Dependency Graph
Interest
Development Management
Interest
EEVEE
Interest
EEVEE & Viewport
Interest
Freestyle
Interest
Geometry Nodes
Interest
Grease Pencil
Interest
ID Management
Interest
Images & Movies
Interest
Import Export
Interest
Line Art
Interest
Masking
Interest
Metal
Interest
Modeling
Interest
Modifiers
Interest
Motion Tracking
Interest
Nodes & Physics
Interest
OpenGL
Interest
Overlay
Interest
Overrides
Interest
Performance
Interest
Physics
Interest
Pipeline, Assets & IO
Interest
Platforms, Builds & Tests
Interest
Python API
Interest
Render & Cycles
Interest
Render Pipeline
Interest
Sculpt, Paint & Texture
Interest
Text Editor
Interest
Translations
Interest
Triaging
Interest
Undo
Interest
USD
Interest
User Interface
Interest
UV Editing
Interest
VFX & Video
Interest
Video Sequencer
Interest
Virtual Reality
Interest
Vulkan
Interest
Wayland
Interest
Workbench
Interest: X11
Legacy
Blender 2.8 Project
Legacy
Milestone 1: Basic, Local Asset Browser
Legacy
OpenGL Error
Meta
Good First Issue
Meta
Papercut
Meta
Retrospective
Meta
Security
Module
Animation & Rigging
Module
Core
Module
Development Management
Module
EEVEE & Viewport
Module
Grease Pencil
Module
Modeling
Module
Nodes & Physics
Module
Pipeline, Assets & IO
Module
Platforms, Builds & Tests
Module
Python API
Module
Render & Cycles
Module
Sculpt, Paint & Texture
Module
Triaging
Module
User Interface
Module
VFX & Video
Platform
FreeBSD
Platform
Linux
Platform
macOS
Platform
Windows
Priority
High
Priority
Low
Priority
Normal
Priority
Unbreak Now!
Status
Archived
Status
Confirmed
Status
Duplicate
Status
Needs Info from Developers
Status
Needs Information from User
Status
Needs Triage
Status
Resolved
Type
Bug
Type
Design
Type
Known Issue
Type
Patch
Type
Report
Type
To Do
No Milestone
No project
No Assignees
3 Participants
Notifications
Due Date
The due date is invalid or out of range. Please use the format 'yyyy-mm-dd'.

No due date set.

Dependencies

No dependencies set.

Reference: blender/blender#56439
No description provided.