Fix T56439: Crash removing Rigid Body World.

Need to rebuild the graph when we add or remove rigidbody world!